@@ -13,10 +13,10 @@
             2020-11-12, Erik P G Johansson: I have not managed to manually find any thruster firings for time period 2020-02-12 to 2020-03-29.
         </P>
         <P>
-            2021-05-24, Erik P G Johansson: Data has not been systematically searched for saturation, but should cover most cases (or at least the most egregious ones) up until 2021-03-06.
+            2024-09-12, Erik P G Johansson: Data has not been systematically searched for saturation, but should cover most cases (or at least the most egregious ones) up until 2021-03-06. After the creation of this form of labeling, functionality for automatically detecting saturation has been added to BICAS. This functionality does however not distinguish between full and partial saturation. One should therefore not need to manually add more saturated time intervalls than the ones already labelled.
         </P>
         <P>
-            2024-02-01, Erik P G Johansson: Table should contain all thruster firings for the time period 2020-02-12 (launch+2 days) to 2024-05-19 (inclusive). Only contains manually identified thuster firings.
+            2024-02-01, Erik P G Johansson: Table should contain all thruster firings for the time period 2020-02-12 (launch+2 days) to 2024-08-04 (inclusive). Only contains manually identified thuster firings.
         </P>
         <P>
             2024-01-31, Erik P G Johansson: BICAS detects saturation itself since v8.0.0 and labels it as "full saturation". One should therefore not need to add more FULL_SATURATION entries to this list. FULL_SATURATION entries in this table are additionally treated by BICAS as "full saturation".
@@ -2283,6 +2283,84 @@
         <tr>
 <td>2024-05-13T01:04:19</td>
 <td> 2024-05-13T01:16:53</td>
+<td>THRUSTER_FIRING</td>
+<td></td>
+</tr>
+        <tr>
+<td>2024-05-20T01:04:31</td>
+<td> 2024-05-20T01:14:57</td>
+<td>THRUSTER_FIRING</td>
+<td></td>
+</tr>
+        <tr>
+<td>2024-05-27T01:04:23</td>
+<td> 2024-05-27T01:14:31</td>
+<td>THRUSTER_FIRING</td>
+<td></td>
+</tr>
+        <tr>
+<td>2024-06-03T01:04:21</td>
+<td> 2024-06-03T01:14:17</td>
+<td>THRUSTER_FIRING</td>
+<td></td>
+</tr>
+        <tr>
+<td>2024-06-10T01:04:21</td>
+<td> 2024-06-10T01:18:46</td>
+<td>THRUSTER_FIRING</td>
+<td></td>
+</tr>
+        <tr>
+<td>2024-06-17T01:04:19</td>
+<td> 2024-06-17T01:23:24</td>
+<td>THRUSTER_FIRING</td>
+<td></td>
+</tr>
+        <tr>
+<td>2024-06-24T01:04:18</td>
+<td> 2024-06-24T01:22:40</td>
+<td>THRUSTER_FIRING</td>
+<td></td>
+</tr>
+        <tr>
+<td>2024-07-01T01:04:22</td>
+<td> 2024-07-01T01:22:24</td>
+<td>THRUSTER_FIRING</td>
+<td></td>
+</tr>
+        <tr>
+<td>2024-07-08T01:04:26</td>
+<td> 2024-07-08T01:18:27</td>
+<td>THRUSTER_FIRING</td>
+<td></td>
+</tr>
+        <tr>
+<td>2024-07-08T20:29:28</td>
+<td> 2024-07-08T20:42:02</td>
+<td>THRUSTER_FIRING</td>
+<td>Second thruster firing on the same day (unusual!)</td>
+</tr>
+        <tr>
+<td>2024-07-15T01:04:28</td>
+<td> 2024-07-15T01:22:04</td>
+<td>THRUSTER_FIRING</td>
+<td></td>
+</tr>
+        <tr>
+<td>2024-07-21T22:30:07</td>
+<td> 2024-07-21T22:44:30</td>
+<td>THRUSTER_FIRING</td>
+<td></td>
+</tr>
+        <tr>
+<td>2024-07-22T20:14:23</td>
+<td> 2024-07-22T20:26:52</td>
+<td>THRUSTER_FIRING</td>
+<td></td>
+</tr>
+        <tr>
+<td>2024-07-29T10:34:22</td>
+<td> 2024-07-29T10:46:04</td>
 <td>THRUSTER_FIRING</td>
 <td></td>
 </tr>
