@@ -220,3 +220,4 @@ Version x.x.x
 * Removed setting
   PROCESSING.RCT_REGEXP.BIAS
 * Changed glob.attributes TIME_MIN, TIME_MAX to only have six decimals.
+* Requires updated master CDF versions (better metadata).
